src/style/style.scss
/* Google fonts */
@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,800;1,9..40,900;1,9..40,1000&display=swap');
/* Google icon */
.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 600,
  'GRAD' 200,
  'opsz' 40
}

$morning: linear-gradient(30deg, rgb(244, 238, 179), rgb(123, 174, 171)) no-repeat;
$midday: linear-gradient(70deg, #adcae7, #4f75a1) no-repeat;
$sunset: linear-gradient(-20deg, rgb(244, 179, 198), rgb(63, 63, 135)) no-repeat;
$night: linear-gradient(-20deg, rgb(91, 85, 139), rgb(20, 20, 49)) no-repeat;


/* Style */
* {
    margin: 0px;
    padding: 0px;
    color: white;
}

svg {
    fill: white;
}

html {
    font-size: 20px;
}

body {
    height: 100vh;
    background: $morning;
    font-family: 'DM Sans', sans-serif;
    display: grid;
    grid-template-rows: auto 1fr;
    &[data-time='morning'] {
        background: $morning;
    }
    &[data-time='midday']{
        background: $midday;
    }
    &[data-time='sunset']{
        background: $sunset;
    }
    &[data-time='night']{
        background: $night;
    }
}

button{
    border: none;
    background-color: transparent;
    &:hover {
        cursor: pointer;
    }
    &.search {
        vertical-align: middle;
    }
    &.homepage {
        font-weight: 600;
        font-size: 1.5rem;
        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
    }
}

div.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 70px;

    div.searchbar {
        flex-basis: 50%;
        flex-shrink: 1;
    }
}


input#search {
    background-color: rgba(255, 255, 255, 0.3);
    border-radius: 20px;
    border: none;
    font-size: 1rem;
    font-weight: 300;
    padding: 10px;
    padding-left: 1rem;
    margin-right: 0.5rem;
    width: 90%;
    :focus {
        outline: none;
    }
}

div.content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-self: stretch;
    height: 70vh;

    h2 {
        font-size: 6rem;
        font-weight: 200;
        text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
    }
}

div.container {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);

    &.details {
        justify-content: center;
        gap: 4rem;

        .curcondition-details {
            display: grid;
            grid-template: 1fr 1fr / 1fr 1fr;
            gap: 50px 20px;

            >div>div {
                display: flex;
                align-items: center;
                justify-content: flex-start;
                font-size: 1.8rem;
            }
        }

        .forecast {
            display: flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            width: 200px;
            height: 100px;
            gap: 20px;
            h4 {
                font-weight: 500;
            }
            .day {
                border: 1px white solid;
                padding: 10px;
                border-radius: 10px;
            }
        }

        svg {
            height: 34px;
            box-sizing: border-box;
            vertical-align: middle;
        }
    }

    &.current{
        .cur-condition {
            font-size: 1.6rem;
            max-width: 350px;
            text-align: center;

            span svg {
                vertical-align: bottom;
                margin-left: 15px;
            }
        }
        .location {
            max-width: 350px;
            text-align: center;
        }

        .hi-lo, .datetime {
            font-size: 1rem;
            font-weight: 400;
        }
        h3.unit, h3.unit button {
            font-size: 1rem;
            letter-spacing: 5px;

            &.selected {
                border: 1px white solid;
                border-radius: 5px;
                padding: 5px;
            }
        }
    }
}

div.error {
    position: absolute;
    top: 13%;
    right: 15%;
    color: rgb(230, 119, 119);
    font-size: 0.8rem;
    opacity: 0;
}

@media screen and (max-width: 760px) {
    html {
        font-size: 18px;
    }
    body {
        width: 100vw;
        height: auto;
        display: block;
    }

    div.navbar {
        display: block;
        text-align: center;
        padding: 20px;
        padding-top: 30px;

        h1 {
            font-size: 2rem;
            font-weight: 600;
        }

        .searchbar {
            margin: 20px 0px;
            width: 100%;
            
            form {
                display: flex;

                input {
                    height: 2.4rem;
                    flex-basis: 90%;
                }
            }
        }

    }

    div.container {
        &.details {
            display: block;
            .curcondition-details {
                margin: 30px;
                gap: 0px;
                height: 200px;
                justify-items: center;
                align-items: center;

                span {
                    font-size: 1.4rem;
                }
            }
            .forecast {
                margin: 30px auto;
                justify-content: space-between;
                width: 60%;
                min-width: 250px;
            }
        }
    }

    div.content {
        display: block;
        height: auto;
    }
}

